Bennon, Ryalan Temple, Seinathil, Deamoine, Varaine ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -4168,3 +4168,223 @@
  A44_idea_6_3_desc:0 "Esmaraine 6 desc"
  A44_idea_7_3:0 "Silver Cities, Serene Lakes, Golden Palaces"
  A44_idea_7_3_desc:0 "Esmaraine 7 desc"
+
+
+ A43_ideas_1:0 "Ryalan Temple Ideas 1"
+ A43_ideas_1_start:0 "Ryalan Temple Traditions 1"
+ A43_ideas_1_bonus:0 "Ryalan Temple Ambition 1"
+ A43_idea_1_1:0 "Married to Ryala, Ryalanar"
+ A43_idea_1_1_desc:0 "Ryalan Temple 1 desc"
+ A43_idea_2_1:0 "Know Everyone"
+ A43_idea_2_1_desc:0 "Ryalan Temple 2 desc"
+ A43_idea_3_1:0 "Virginal Virtues"
+ A43_idea_3_1_desc:0 "Ryalan Temple 3 desc"
+ A43_idea_4_1:0 "Land of Rivers and Forests"
+ A43_idea_4_1_desc:0 "Ryalan Temple 4 desc"
+ A43_idea_5_1:0 "Beautiful Bargaining"
+ A43_idea_5_1_desc:0 "Ryalan Temple 5 desc"
+ A43_idea_6_1:0 "Light On Our Feet"
+ A43_idea_6_1_desc:0 "Ryalan Temple 6 desc"
+ A43_idea_7_1:0 "Loving Laws"
+ A43_idea_7_1_desc:0 "Ryalan Temple 7 desc"
+
+ A43_ideas_2:0 "Ryalan Temple Ideas 2"
+ A43_ideas_2_start:0 "Ryalan Temple Traditions 2"
+ A43_ideas_2_bonus:0 "Ryalan Temple Ambition 2"
+ A43_idea_1_2:0 "Married to Ryala, Ryalanar"
+ A43_idea_1_2_desc:0 "Ryalan Temple 1 desc"
+ A43_idea_2_2:0 "Know Everyone"
+ A43_idea_2_2_desc:0 "Ryalan Temple 2 desc"
+ A43_idea_3_2:0 "Virginal Virtues"
+ A43_idea_3_2_desc:0 "Ryalan Temple 3 desc"
+ A43_idea_4_2:0 "Land of Rivers and Forests"
+ A43_idea_4_2_desc:0 "Ryalan Temple 4 desc"
+ A43_idea_5_2:0 "Beautiful Bargaining"
+ A43_idea_5_2_desc:0 "Ryalan Temple 5 desc"
+ A43_idea_6_2:0 "Light On Our Feet"
+ A43_idea_6_2_desc:0 "Ryalan Temple 6 desc"
+ A43_idea_7_2:0 "Loving Laws"
+ A43_idea_7_2_desc:0 "Ryalan Temple 7 desc"
+
+ A43_ideas_3:0 "Ryalan Temple Ideas 3"
+ A43_ideas_3_start:0 "Ryalan Temple Traditions 3"
+ A43_ideas_3_bonus:0 "Ryalan Temple Ambition 3"
+ A43_idea_1_3:0 "Married to Ryala, Ryalanar"
+ A43_idea_1_3_desc:0 "Ryalan Temple 1 desc"
+ A43_idea_2_3:0 "Know Everyone"
+ A43_idea_2_3_desc:0 "Ryalan Temple 2 desc"
+ A43_idea_3_3:0 "Virginal Virtues"
+ A43_idea_3_3_desc:0 "Ryalan Temple 3 desc"
+ A43_idea_4_3:0 "Land of Rivers and Forests"
+ A43_idea_4_3_desc:0 "Ryalan Temple 4 desc"
+ A43_idea_5_3:0 "Beautiful Bargaining"
+ A43_idea_5_3_desc:0 "Ryalan Temple 5 desc"
+ A43_idea_6_3:0 "Light On Our Feet"
+ A43_idea_6_3_desc:0 "Ryalan Temple 6 desc"
+ A43_idea_7_3:0 "Loving Laws"
+ A43_idea_7_3_desc:0 "Ryalan Temple 7 desc"
+
+
+ A90_ideas_1:0 "Songman Ideas 1"
+ A90_ideas_1_start:0 "Songman Traditions 1"
+ A90_ideas_1_bonus:0 "Songman Ambition 1"
+ A90_idea_1_1:0 "Valiant Vocals"
+ A90_idea_1_1_desc:0 "Songman 1 desc"
+ A90_idea_2_1:0 "Know Everyone"
+ A90_idea_2_1_desc:0 "Songman 2 desc"
+ A90_idea_3_1:0 "Tried Tunes"
+ A90_idea_3_1_desc:0 "Songman 3 desc"
+ A90_idea_4_1:0 "Land of Rivers and Forests"
+ A90_idea_4_1_desc:0 "Songman 4 desc"
+ A90_idea_5_1:0 "Splendid Songs"
+ A90_idea_5_1_desc:0 "Songman 5 desc"
+ A90_idea_6_1:0 "Light On Our Feet"
+ A90_idea_6_1_desc:0 "Songman 6 desc"
+ A90_idea_7_1:0 "Marching Melodies"
+ A90_idea_7_1_desc:0 "Songman 7 desc"
+
+ A90_ideas_2:0 "Songman Ideas 2"
+ A90_ideas_2_start:0 "Songman Traditions 2"
+ A90_ideas_2_bonus:0 "Songman Ambition 2"
+ A90_idea_1_2:0 "Valiant Vocals"
+ A90_idea_1_2_desc:0 "Songman 1 desc"
+ A90_idea_2_2:0 "Know Everyone"
+ A90_idea_2_2_desc:0 "Songman 2 desc"
+ A90_idea_3_2:0 "Tried Tunes"
+ A90_idea_3_2_desc:0 "Songman 3 desc"
+ A90_idea_4_2:0 "Land of Rivers and Forests"
+ A90_idea_4_2_desc:0 "Songman 4 desc"
+ A90_idea_5_2:0 "Splendid Songs"
+ A90_idea_5_2_desc:0 "Songman 5 desc"
+ A90_idea_6_2:0 "Light On Our Feet"
+ A90_idea_6_2_desc:0 "Songman 6 desc"
+ A90_idea_7_2:0 "Marching Melodies"
+ A90_idea_7_2_desc:0 "Songman 7 desc"
+
+ A90_ideas_3:0 "Songman Ideas 3"
+ A90_ideas_3_start:0 "Songman Traditions 3"
+ A90_ideas_3_bonus:0 "Songman Ambition 3"
+ A90_idea_1_3:0 "Valiant Vocals"
+ A90_idea_1_3_desc:0 "Songman 1 desc"
+ A90_idea_2_3:0 "Know Everyone"
+ A90_idea_2_3_desc:0 "Songman 2 desc"
+ A90_idea_3_3:0 "Tried Tunes"
+ A90_idea_3_3_desc:0 "Songman 3 desc"
+ A90_idea_4_3:0 "Land of Rivers and Forests"
+ A90_idea_4_3_desc:0 "Songman 4 desc"
+ A90_idea_5_3:0 "Splendid Songs"
+ A90_idea_5_3_desc:0 "Songman 5 desc"
+ A90_idea_6_3:0 "Light On Our Feet"
+ A90_idea_6_3_desc:0 "Songman 6 desc"
+ A90_idea_7_3:0 "Marching Melodies"
+ A90_idea_7_3_desc:0 "Songman 7 desc"
+
+
+ A99_ideas_1:0 "Potionmaker Ideas 1"
+ A99_ideas_1_start:0 "Potionmaker Traditions 1"
+ A99_ideas_1_bonus:0 "Potionmaker Ambition 1"
+ A99_idea_1_1:0 "Strongest Potions"
+ A99_idea_1_1_desc:0 "Potionmaker 1 desc"
+ A99_idea_2_1:0 "Know Everyone"
+ A99_idea_2_1_desc:0 "Potionmaker 2 desc"
+ A99_idea_3_1:0 "The Green River"
+ A99_idea_3_1_desc:0 "Potionmaker 3 desc"
+ A99_idea_4_1:0 "Land of Rivers and Forests"
+ A99_idea_4_1_desc:0 "Potionmaker 4 desc"
+ A99_idea_5_1:0 "Mastering Gunpowder"
+ A99_idea_5_1_desc:0 "Potionmaker 5 desc"
+ A99_idea_6_1:0 "Light On Our Feet"
+ A99_idea_6_1_desc:0 "Potionmaker 6 desc"
+ A99_idea_7_1:0 "Pluralism"
+ A99_idea_7_1_desc:0 "Potionmaker 7 desc"
+
+ A99_ideas_2:0 "Potionmaker Ideas 2"
+ A99_ideas_2_start:0 "Potionmaker Traditions 2"
+ A99_ideas_2_bonus:0 "Potionmaker Ambition 2"
+ A99_idea_1_2:0 "Strongest Potions"
+ A99_idea_1_2_desc:0 "Potionmaker 1 desc"
+ A99_idea_2_2:0 "Know Everyone"
+ A99_idea_2_2_desc:0 "Potionmaker 2 desc"
+ A99_idea_3_2:0 "The Green River"
+ A99_idea_3_2_desc:0 "Potionmaker 3 desc"
+ A99_idea_4_2:0 "Land of Rivers and Forests"
+ A99_idea_4_2_desc:0 "Potionmaker 4 desc"
+ A99_idea_5_2:0 "Mastering Gunpowder"
+ A99_idea_5_2_desc:0 "Potionmaker 5 desc"
+ A99_idea_6_2:0 "Light On Our Feet"
+ A99_idea_6_2_desc:0 "Potionmaker 6 desc"
+ A99_idea_7_2:0 "Pluralism"
+ A99_idea_7_2_desc:0 "Potionmaker 7 desc"
+
+ A99_ideas_3:0 "Potionmaker Ideas 3"
+ A99_ideas_3_start:0 "Potionmaker Traditions 3"
+ A99_ideas_3_bonus:0 "Potionmaker Ambition 3"
+ A99_idea_1_3:0 "Strongest Potions"
+ A99_idea_1_3_desc:0 "Potionmaker 1 desc"
+ A99_idea_2_3:0 "Know Everyone"
+ A99_idea_2_3_desc:0 "Potionmaker 2 desc"
+ A99_idea_3_3:0 "The Green River"
+ A99_idea_3_3_desc:0 "Potionmaker 3 desc"
+ A99_idea_4_3:0 "Land of Rivers and Forests"
+ A99_idea_4_3_desc:0 "Potionmaker 4 desc"
+ A99_idea_5_3:0 "Mastering Gunpowder"
+ A99_idea_5_3_desc:0 "Potionmaker 5 desc"
+ A99_idea_6_3:0 "Light On Our Feet"
+ A99_idea_6_3_desc:0 "Potionmaker 6 desc"
+ A99_idea_7_3:0 "Pluralism"
+ A99_idea_7_3_desc:0 "Potionmaker 7 desc"
+
+
+ A39E_ideas_1:0 "Havoric Ideas 1"
+ A39E_ideas_1_start:0 "Havoric Traditions 1"
+ A39E_ideas_1_bonus:0 "Havoric Ambition 1"
+ A39E_idea_1_1:0 "Esmari Champions"
+ A39E_idea_1_1_desc:0 "Havoric 1 desc"
+ A39E_idea_2_1:0 "Know Everyone"
+ A39E_idea_2_1_desc:0 "Havoric 2 desc"
+ A39E_idea_3_1:0 "Divide Us No More!"
+ A39E_idea_3_1_desc:0 "Havoric 3 desc"
+ A39E_idea_4_1:0 "Land of Rivers and Forests"
+ A39E_idea_4_1_desc:0 "Havoric 4 desc"
+ A39E_idea_5_1:0 "Horse-wrought Destruction"
+ A39E_idea_5_1_desc:0 "Havoric 5 desc"
+ A39E_idea_6_1:0 "Light On Our Feet"
+ A39E_idea_6_1_desc:0 "Havoric 6 desc"
+ A39E_idea_7_1:0 "Havoric Revanchism"
+ A39E_idea_7_1_desc:0 "Havoric 7 desc"
+
+ A39E_ideas_1:0 "Havoric Ideas 2"
+ A39E_ideas_1_start:0 "Havoric Traditions 2"
+ A39E_ideas_1_bonus:0 "Havoric Ambition 2"
+ A39E_idea_1_1:0 "Esmari Champions"
+ A39E_idea_1_1_desc:0 "Havoric 1 desc"
+ A39E_idea_2_1:0 "Know Everyone"
+ A39E_idea_2_1_desc:0 "Havoric 2 desc"
+ A39E_idea_3_1:0 "Divide Us No More!"
+ A39E_idea_3_1_desc:0 "Havoric 3 desc"
+ A39E_idea_4_1:0 "Land of Rivers and Forests"
+ A39E_idea_4_1_desc:0 "Havoric 4 desc"
+ A39E_idea_5_1:0 "Horse-wrought Destruction"
+ A39E_idea_5_1_desc:0 "Havoric 5 desc"
+ A39E_idea_6_1:0 "Light On Our Feet"
+ A39E_idea_6_1_desc:0 "Havoric 6 desc"
+ A39E_idea_7_1:0 "Havoric Revanchism"
+ A39E_idea_7_1_desc:0 "Havoric 7 desc"
+
+ A39E_ideas_1:0 "Havoric Ideas 3"
+ A39E_ideas_1_start:0 "Havoric Traditions 3"
+ A39E_ideas_1_bonus:0 "Havoric Ambition 3"
+ A39E_idea_1_1:0 "Esmari Champions"
+ A39E_idea_1_1_desc:0 "Havoric 1 desc"
+ A39E_idea_2_1:0 "Know Everyone"
+ A39E_idea_2_1_desc:0 "Havoric 2 desc"
+ A39E_idea_3_1:0 "Divide Us No More!"
+ A39E_idea_3_1_desc:0 "Havoric 3 desc"
+ A39E_idea_4_1:0 "Land of Rivers and Forests"
+ A39E_idea_4_1_desc:0 "Havoric 4 desc"
+ A39E_idea_5_1:0 "Horse-wrought Destruction"
+ A39E_idea_5_1_desc:0 "Havoric 5 desc"
+ A39E_idea_6_1:0 "Light On Our Feet"
+ A39E_idea_6_1_desc:0 "Havoric 6 desc"
+ A39E_idea_7_1:0 "Havoric Revanchism"
+ A39E_idea_7_1_desc:0 "Havoric 7 desc"
