--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -27,9 +27,14 @@
  cot_ideas_upgrade.4.d:0 "Almighty ruler, your realm is the envy of people from Gerudia to Bulwar. It is time for an upgrade, and a new era of ascendency begins now!!"
  CoT_ideagroups.4.a:0 "The Eagle Looms!"
 
- cot_ideas_upgrade.5.t:0 "TODO"
+ cot_ideas_upgrade.5.t:0 "More than just the city"
  cot_ideas_upgrade.5.d:0 "TODO"
  CoT_ideagroups.5.a:0 "Not just Anbenncóst"
+
+ cot_ideas_upgrade.6.t:0 "Future of Havoral"
+ cot_ideas_upgrade.6.d:0 "TODO"
+ CoT_ideagroups.6.a:0 "Adopt Rimmeric Culture"
+ CoT_ideagroups.6.b:0 "Stay Esmari"
 
  improved_marines:0 "Improved Marines"
  cot_vassal_econimic:0 "Economy Focus"
