--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -134,7 +134,7 @@
  A10_ideas_1_bonus:0 "Minara Temple Ambition 1"
  A10_idea_1_1:0 "Lady of Love"
  A10_idea_1_1_desc:0 "Minara Temple 1 desc"
- A10_idea_2_1:0 "Vines and Vineyards8"
+ A10_idea_2_1:0 "Vines and Vineyards"
  A10_idea_2_1_desc:0 "Minara Temple 2 desc"
  A10_idea_3_1:0 " Easily Placated"
  A10_idea_3_1_desc:0 "Minara Temple 3 desc"
@@ -4353,38 +4353,38 @@
  A39E_idea_7_1:0 "Havoric Revanchism"
  A39E_idea_7_1_desc:0 "Havoric 7 desc"
 
- A39E_ideas_1:0 "Havoric Ideas 2"
- A39E_ideas_1_start:0 "Havoric Traditions 2"
- A39E_ideas_1_bonus:0 "Havoric Ambition 2"
- A39E_idea_1_1:0 "Esmari Champions"
- A39E_idea_1_1_desc:0 "Havoric 1 desc"
- A39E_idea_2_1:0 "Know Everyone"
- A39E_idea_2_1_desc:0 "Havoric 2 desc"
- A39E_idea_3_1:0 "Divide Us No More!"
- A39E_idea_3_1_desc:0 "Havoric 3 desc"
- A39E_idea_4_1:0 "Land of Rivers and Forests"
- A39E_idea_4_1_desc:0 "Havoric 4 desc"
- A39E_idea_5_1:0 "Horse-wrought Destruction"
- A39E_idea_5_1_desc:0 "Havoric 5 desc"
- A39E_idea_6_1:0 "Light On Our Feet"
- A39E_idea_6_1_desc:0 "Havoric 6 desc"
- A39E_idea_7_1:0 "Havoric Revanchism"
- A39E_idea_7_1_desc:0 "Havoric 7 desc"
+ A39E_ideas_2:0 "Havoric Ideas 2"
+ A39E_ideas_2_start:0 "Havoric Traditions 2"
+ A39E_ideas_2_bonus:0 "Havoric Ambition 2"
+ A39E_idea_1_2:0 "Esmari Champions"
+ A39E_idea_1_2_desc:0 "Havoric 1 desc"
+ A39E_idea_2_2:0 "Know Everyone"
+ A39E_idea_2_2_desc:0 "Havoric 2 desc"
+ A39E_idea_3_2:0 "Divide Us No More!"
+ A39E_idea_3_2_desc:0 "Havoric 3 desc"
+ A39E_idea_4_2:0 "Land of Rivers and Forests"
+ A39E_idea_4_2_desc:0 "Havoric 4 desc"
+ A39E_idea_5_2:0 "Horse-wrought Destruction"
+ A39E_idea_5_2_desc:0 "Havoric 5 desc"
+ A39E_idea_6_2:0 "Light On Our Feet"
+ A39E_idea_6_2_desc:0 "Havoric 6 desc"
+ A39E_idea_7_2:0 "Havoric Revanchism"
+ A39E_idea_7_2_desc:0 "Havoric 7 desc"
 
- A39E_ideas_1:0 "Havoric Ideas 3"
- A39E_ideas_1_start:0 "Havoric Traditions 3"
- A39E_ideas_1_bonus:0 "Havoric Ambition 3"
- A39E_idea_1_1:0 "Esmari Champions"
- A39E_idea_1_1_desc:0 "Havoric 1 desc"
- A39E_idea_2_1:0 "Know Everyone"
- A39E_idea_2_1_desc:0 "Havoric 2 desc"
- A39E_idea_3_1:0 "Divide Us No More!"
- A39E_idea_3_1_desc:0 "Havoric 3 desc"
- A39E_idea_4_1:0 "Land of Rivers and Forests"
- A39E_idea_4_1_desc:0 "Havoric 4 desc"
- A39E_idea_5_1:0 "Horse-wrought Destruction"
- A39E_idea_5_1_desc:0 "Havoric 5 desc"
- A39E_idea_6_1:0 "Light On Our Feet"
- A39E_idea_6_1_desc:0 "Havoric 6 desc"
- A39E_idea_7_1:0 "Havoric Revanchism"
- A39E_idea_7_1_desc:0 "Havoric 7 desc"
+ A39E_ideas_3:0 "Havoric Ideas 3"
+ A39E_ideas_3_start:0 "Havoric Traditions 3"
+ A39E_ideas_3_bonus:0 "Havoric Ambition 3"
+ A39E_idea_1_3:0 "Esmari Champions"
+ A39E_idea_1_3_desc:0 "Havoric 1 desc"
+ A39E_idea_2_3:0 "Know Everyone"
+ A39E_idea_2_3_desc:0 "Havoric 2 desc"
+ A39E_idea_3_3:0 "Divide Us No More!"
+ A39E_idea_3_3_desc:0 "Havoric 3 desc"
+ A39E_idea_4_3:0 "Land of Rivers and Forests"
+ A39E_idea_4_3_desc:0 "Havoric 4 desc"
+ A39E_idea_5_3:0 "Horse-wrought Destruction"
+ A39E_idea_5_3_desc:0 "Havoric 5 desc"
+ A39E_idea_6_3:0 "Light On Our Feet"
+ A39E_idea_6_3_desc:0 "Havoric 6 desc"
+ A39E_idea_7_3:0 "Havoric Revanchism"
+ A39E_idea_7_3_desc:0 "Havoric 7 desc"
