--- a/localisation/Flavour_Konwell_A35_l_english.yml
+++ b/localisation/Flavour_Konwell_A35_l_english.yml
@@ -164,9 +164,9 @@
 ##### COT KONWELL ######
 
 # Tooltips
- konwell_cot_escann_tt:0 "Enables a diplomatic action allowing us to offer sale of legitimacy-enhancing documents from the 'Imperial Archive' to those of proper faith, for a modicum return of diplomatic support."
- konwell_cot_gerudia_tt:0 "Enables a diplomatic action allowing us to offer sale of our institutional knowledge. §YThis functions as 'Knowledge Sharing' but takes twice as long§!, but that just gives us twice the profit!"
- konwell_cot_kobold_tt:0 "Enables a diplomatic action allowing us to offload some of the 'tall-gnomes' family on others. Supposedly they are architectural experts, which we could use to full effect!"
+ konwell_cot_escann_tt:0 "§YEnables a diplomatic action§! allowing us to offer sale of legitimacy-enhancing documents from the 'Imperial Archive' to those of proper faith, for a modicum return of diplomatic support."
+ konwell_cot_gerudia_tt:0 "§YEnables a diplomatic action§! allowing us to offer sale of our institutional knowledge. \n\n This functions similar to §Y'Knowledge Sharing'§! but is §Y50%§! slower and only target's their §Ycapital§! province."
+ konwell_cot_kobold_tt:0 "§YEnables a diplomatic action§! allowing us to offload some of the 'tall-gnomes' family on others. Supposedly they are architectural experts, which we could use to full effect!"
 
 # Missions
  konwell_cot_escann_title:0 "New Escann Lore"
@@ -269,5 +269,22 @@
  konwell_cot_forward_archive:0 "Forward Archive"
  konwell_cot_forward_archive_desc:0 "A foreward instillation of Anbennarian Archivists, dedicated to collecting, collating, cross-referencing, and recording all knowledge as it is siphoned from the various lands of the east and prepared for the long journey west."
  konwell_cot_archival_defenses:0 "Archival Defenses"
+ konwell_cot_development_rush:0 "Development Rush"
+ konwell_cot_development_rush_desc:0 "The Archive-Lord has decreed we must focus our efforts on developing our lands so that we are better able to store the vast troves of knowledge our returning Archivists are sure to bring."
+ konwell_cot_ryalafren:0 "Friends of Ryala"
+ konwell_cot_konfren:0 "Friends of Konwell"
+ konwell_cot_paying:0 "Paying Konwell Archivists"
+ konwell_cot_paying_desc:0 "Our country is currently paying to host a delegation of Anbennarian Archivists, whose strange instruments and constant communiques with their homeland come at a price."
+ konwell_cot_sell_records:0 "Purchase of Legitimacy Records"
+ konwell_cot_sell_records_desc:0 "We've recently purchased records from the Imperial Archive which proves our right to rule. Incredibly, there actually seems to be a tiny bit of truth to it."
  
 # Misc
+ konwell_cot_tall_reform:0 "Archival Preservation"
+ konwell_cot_tall_reform_desc:0 "The Archive-Lord of Konwell has decreed his realm's purpose is to defend and preserve the knowledge as the Archivists bring it. \n\n As long as we remain under §Y8 provinces§! we will get powerful scaling buffs in all of our §YEsmarian§! lands."
+ konwell_cot_wide_reform:0 "Archival Expansion"
+ konwell_cot_wide_reform_desc:0 "The Archive-Lord of Konwell has decreed his realm's purpose is to expand throughout the land to aid the Archivists in their pursuit of knowledge."
+ cot_konwelledge_sharing_title:0 "Offer Institutional Oversight"
+ cot_konwelledge_sharing_desc:0 "Offer the target country §Y0.5§! monthly institution increase in their capital, alongside §Y-20%§! embracement cost. This will cost them nearly §Y15%§! of their income and will last for §Y20§! years. In return we must spend §R25§!adm points but we will gain §G1 year of income§!."
+ cot_konwell_legit_title:0 "Offer Sale of Legitimizing Records"
+ cot_konwell_legit_desc:0 "As the proprietor of the Imperial Archive we have a vast mountain of documents going back for centuries, perhaps even before elves came to these lands. As such, we have amble documentation which can be used to support the various ridiculous claims purported by rulers of these lands. For the small price of §Y50§!dip mana (we gain §G25dip§!), now the rightful rulers of Cannor can purchase documents proving their claim. (They get §Y0.5§! Legitimacy or equivalent, §Y-10%§! Stability Cost Modifier, §Y+5§! Max Absolutism, and §Y-20%§! Fabricate claims cost."
+ 
