Imperial Fix cont'd

--- a/localisation/emperor_content_l_english.yml
+++ b/localisation/emperor_content_l_english.yml
@@ -1430,7 +1430,7 @@
  emperor_landsknechtswesen_title:0 "Imperial Adventurer Companies"
  emperor_landsknechtswesen_desc:0 "Organize Anbennar's many adventurer and mercenary bands into official companies available for the Empire's defense."
  emperor_reichstag_collegia_title:0 "Establish the Parliamentary Colleges"
- emperor_reichstag_collegia_desc:0 "Divide the Parliament between into separate colleges for the Emperor, the Princes and the Imperial Cities to improve its functioning for all."
+ emperor_reichstag_collegia_desc:0 "Divide the Parliament between into separate colleges for the Emperor, the Princes and the Imperial Cities to improve its functioning for all.\n\nThis reform will enable §YFree Cities§! to own their entire capital state. In addition, this will enable a decision for EOA countries to send their heir to college, which has a change to §Yincrease or decrease stats§! among other possible effects."
  emperor_geteilte_macht_title:0 "Shared Authority"
  emperor_geteilte_macht_desc:0 "Guarantee the powers of the Princes so that they in turn may support the strength of the Emperor."
  emperor_rechenschaft_title:0 "Embrace Erelas Reforms"
