Wineport and Konwell innit

--- a/localisation/Flavour_Konwell_A35_l_english.yml
+++ b/localisation/Flavour_Konwell_A35_l_english.yml
@@ -284,7 +284,7 @@
  konwell_cot_wide_reform:0 "Archival Expansion"
  konwell_cot_wide_reform_desc:0 "The Archive-Lord of Konwell has decreed his realm's purpose is to expand throughout the land to aid the Archivists in their pursuit of knowledge."
  cot_konwelledge_sharing_title:0 "Offer Institutional Oversight"
- cot_konwelledge_sharing_desc:0 "Offer the target country §Y0.5§! monthly institution increase in their capital, alongside §Y-20%§! embracement cost. This will cost them nearly §Y15%§! of their income and will last for §Y20§! years. In return we must spend §R25§!adm points but we will gain §G1 year of income§!."
+ cot_konwelledge_sharing_desc:0 "Offer the target country §Y0.5§! monthly institution increase in their capital, alongside §Y-20%§! embracement cost. This will cost them nearly §Y10%§! of their income (as with normal Knowledge Sharing) and will last for §Y20§! years. In return we must spend §R25§!adm points but we will gain §G1 year of income§!."
  cot_konwell_legit_title:0 "Offer Sale of Legitimizing Records"
  cot_konwell_legit_desc:0 "As the proprietor of the Imperial Archive we have a vast mountain of documents going back for centuries, perhaps even before elves came to these lands. As such, we have amble documentation which can be used to support the various ridiculous claims purported by rulers of these lands. For the small price of §Y50§!dip mana (we gain §G25dip§!), now the rightful rulers of Cannor can purchase documents proving their claim. (They get §Y0.5§! Legitimacy or equivalent, §Y-10%§! Stability Cost Modifier, §Y+5§! Max Absolutism, and §Y-20%§! Fabricate claims cost."
  
