--- a/localisation/Flavour_Wineport_A16_l_english.yml
+++ b/localisation/Flavour_Wineport_A16_l_english.yml
@@ -212,3 +212,7 @@
  flavour_wineport.10.d:0 "All the details are now set in stone, depending on how we conducted ourselves during our trip we may have gotten a better or worse deal in the end, but whatever the level of success, we now control a way to produce Liquid Sunlight, which is worth whatever price we spent for it."
  flavour_wineport.10.a:0 "An Amazing Deal."
  flavour_wineport.10.b:0 "A Good Deal."
+ 
+ #Wineport COT
+ wineport_cot_torn_I:0 "Tornaire Tricked Into Wineport Trade Contract"
+ wineport_cot_torn_II:0 "Trade contract with Tornaire"
