--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -4388,3 +4388,151 @@
  A39E_idea_6_3_desc:0 "Havoric 6 desc"
  A39E_idea_7_3:0 "Havoric Revanchism"
  A39E_idea_7_3_desc:0 "Havoric 7 desc"
+
+
+ A25_ideas_2:0 "Damescrown Ideas 2"
+ A25_ideas_2_start:0 "Damescrown Traditions 2"
+ A25_ideas_2_bonus:0 "Damescrown Ambition 2"
+ A25_idea_1_2:0 "A Port Crowned"
+ A25_idea_1_2_desc:0 "Damescrown 1 desc"
+ A25_idea_2_2:0 "Know Everyone"
+ A25_idea_2_2_desc:0 "Damescrown 2 desc"
+ A25_idea_3_2:0 "Between The Big Three"
+ A25_idea_3_2_desc:0 "Damescrown 3 desc"
+ A25_idea_4_2:0 "Land of Rivers and Forests"
+ A25_idea_4_2_desc:0 "Damescrown 4 desc"
+ A25_idea_5_2:0 "Hiring Foreigners"
+ A25_idea_5_2_desc:0 "Damescrown 5 desc"
+ A25_idea_6_2:0 "Light On Our Feet"
+ A25_idea_6_2_desc:0 "Damescrown 6 desc"
+ A25_idea_7_2:0 "Merchant-Diplomats"
+ A25_idea_7_2_desc:0 "Damescrown 7 desc"
+
+ A25_ideas_3:0 "Damescrown Ideas 3"
+ A25_ideas_3_start:0 "Damescrown Traditions 3"
+ A25_ideas_3_bonus:0 "Damescrown Ambition 3"
+ A25_idea_1_3:0 "A Port Crowned"
+ A25_idea_1_3_desc:0 "Damescrown 1 desc"
+ A25_idea_2_3:0 "Know Everyone"
+ A25_idea_2_3_desc:0 "Damescrown 2 desc"
+ A25_idea_3_3:0 "Between The Big Three"
+ A25_idea_3_3_desc:0 "Damescrown 3 desc"
+ A25_idea_4_3:0 "Land of Rivers and Forests"
+ A25_idea_4_3_desc:0 "Damescrown 4 desc"
+ A25_idea_5_3:0 "Hiring Foreigners"
+ A25_idea_5_3_desc:0 "Damescrown 5 desc"
+ A25_idea_6_3:0 "Light On Our Feet"
+ A25_idea_6_3_desc:0 "Damescrown 6 desc"
+ A25_idea_7_3:0 "Merchant-Diplomats"
+ A25_idea_7_3_desc:0 "Damescrown 7 desc"
+
+
+ A89_ideas_2:0 "Aranmas Ideas 2"
+ A89_ideas_2_start:0 "Aranmas Traditions 2"
+ A89_ideas_2_bonus:0 "Aranmas Ambition 2"
+ A89_idea_1_2:0 "Aranmasser Hussars"
+ A89_idea_1_2_desc:0 "Aranmas 1 desc"
+ A89_idea_2_2:0 "Know Everyone"
+ A89_idea_2_2_desc:0 "Aranmas 2 desc"
+ A89_idea_3_2:0 "Between The Big Three"
+ A89_idea_3_2_desc:0 "Aranmas 3 desc"
+ A89_idea_4_2:0 "Land of Rivers and Forests"
+ A89_idea_4_2_desc:0 "Aranmas 4 desc"
+ A89_idea_5_2:0 "Hiring Foreigners"
+ A89_idea_5_2_desc:0 "Aranmas 5 desc"
+ A89_idea_6_2:0 "Light On Our Feet"
+ A89_idea_6_2_desc:0 "Aranmas 6 desc"
+ A89_idea_7_2:0 "Merchant-Diplomats"
+ A89_idea_7_2_desc:0 "Aranmas 7 desc"
+
+ A89_ideas_3:0 "Aranmas Ideas 3"
+ A89_ideas_3_start:0 "Aranmas Traditions 3"
+ A89_ideas_3_bonus:0 "Aranmas Ambition 3"
+ A89_idea_1_3:0 "Aranmasser Hussars"
+ A89_idea_1_3_desc:0 "Aranmas 1 desc"
+ A89_idea_2_3:0 "Know Everyone"
+ A89_idea_2_3_desc:0 "Aranmas 2 desc"
+ A89_idea_3_3:0 "Between The Big Three"
+ A89_idea_3_3_desc:0 "Aranmas 3 desc"
+ A89_idea_4_3:0 "Land of Rivers and Forests"
+ A89_idea_4_3_desc:0 "Aranmas 4 desc"
+ A89_idea_5_3:0 "Hiring Foreigners"
+ A89_idea_5_3_desc:0 "Aranmas 5 desc"
+ A89_idea_6_3:0 "Light On Our Feet"
+ A89_idea_6_3_desc:0 "Aranmas 6 desc"
+ A89_idea_7_3:0 "Merchant-Diplomats"
+ A89_idea_7_3_desc:0 "Aranmas 7 desc"
+
+
+ A53_ideas_2:0 "Aramar Ideas 2"
+ A53_ideas_2_start:0 "Aramar Traditions 2"
+ A53_ideas_2_bonus:0 "Aramar Ambition 2"
+ A53_idea_1_2:0 "All Of Your Money Are Made By Us"
+ A53_idea_1_2_desc:0 "Aramar 1 desc"
+ A53_idea_2_2:0 "Know Everyone"
+ A53_idea_2_2_desc:0 "Aramar 2 desc"
+ A53_idea_3_2:0 "Between The Big Three"
+ A53_idea_3_2_desc:0 "Aramar 3 desc"
+ A53_idea_4_2:0 "Land of Rivers and Forests"
+ A53_idea_4_2_desc:0 "Aramar 4 desc"
+ A53_idea_5_2:0 "Hiring Foreigners"
+ A53_idea_5_2_desc:0 "Aramar 5 desc"
+ A53_idea_6_2:0 "Light On Our Feet"
+ A53_idea_6_2_desc:0 "Aramar 6 desc"
+ A53_idea_7_2:0 "Merchant-Diplomats"
+ A53_idea_7_2_desc:0 "Aramar 7 desc"
+
+ A53_ideas_3:0 "Aramar Ideas 3"
+ A53_ideas_3_start:0 "Aramar Traditions 3"
+ A53_ideas_3_bonus:0 "Aramar Ambition 3"
+ A53_idea_1_3:0 "All Of Your Money Are Made By Us"
+ A53_idea_1_3_desc:0 "Aramar 1 desc"
+ A53_idea_2_3:0 "Know Everyone"
+ A53_idea_2_3_desc:0 "Aramar 2 desc"
+ A53_idea_3_3:0 "Between The Big Three"
+ A53_idea_3_3_desc:0 "Aramar 3 desc"
+ A53_idea_4_3:0 "Land of Rivers and Forests"
+ A53_idea_4_3_desc:0 "Aramar 4 desc"
+ A53_idea_5_3:0 "Hiring Foreigners"
+ A53_idea_5_3_desc:0 "Aramar 5 desc"
+ A53_idea_6_3:0 "Light On Our Feet"
+ A53_idea_6_3_desc:0 "Aramar 6 desc"
+ A53_idea_7_3:0 "Merchant-Diplomats"
+ A53_idea_7_3_desc:0 "Aramar 7 desc"
+
+
+ A54_ideas_2:0 "Crothan Ideas 2"
+ A54_ideas_2_start:0 "Crothan Traditions 2"
+ A54_ideas_2_bonus:0 "Crothan Ambition 2"
+ A54_idea_1_2:0 "Dame's Jewel"
+ A54_idea_1_2_desc:0 "Crothan 1 desc"
+ A54_idea_2_2:0 "Know Everyone"
+ A54_idea_2_2_desc:0 "Crothan 2 desc"
+ A54_idea_3_2:0 "Between The Big Three"
+ A54_idea_3_2_desc:0 "Crothan 3 desc"
+ A54_idea_4_2:0 "Land of Rivers and Forests"
+ A54_idea_4_2_desc:0 "Crothan 4 desc"
+ A54_idea_5_2:0 "Hiring Foreigners"
+ A54_idea_5_2_desc:0 "Crothan 5 desc"
+ A54_idea_6_2:0 "Light On Our Feet"
+ A54_idea_6_2_desc:0 "Crothan 6 desc"
+ A54_idea_7_2:0 "Merchant-Diplomats"
+ A54_idea_7_2_desc:0 "Crothan 7 desc"
+
+ A54_ideas_3:0 "Crothan Ideas 3"
+ A54_ideas_3_start:0 "Crothan Traditions 3"
+ A54_ideas_3_bonus:0 "Crothan Ambition 3"
+ A54_idea_1_3:0 "Dame's Jewel"
+ A54_idea_1_3_desc:0 "Crothan 1 desc"
+ A54_idea_2_3:0 "Know Everyone"
+ A54_idea_2_3_desc:0 "Crothan 2 desc"
+ A54_idea_3_3:0 "Between The Big Three"
+ A54_idea_3_3_desc:0 "Crothan 3 desc"
+ A54_idea_4_3:0 "Land of Rivers and Forests"
+ A54_idea_4_3_desc:0 "Crothan 4 desc"
+ A54_idea_5_3:0 "Hiring Foreigners"
+ A54_idea_5_3_desc:0 "Crothan 5 desc"
+ A54_idea_6_3:0 "Light On Our Feet"
+ A54_idea_6_3_desc:0 "Crothan 6 desc"
+ A54_idea_7_3:0 "Merchant-Diplomats"
+ A54_idea_7_3_desc:0 "Crothan 7 desc"
