--- a/localisation/CoT_gov_reforms_l_english.yml
+++ b/localisation/CoT_gov_reforms_l_english.yml
@@ -1,4 +1,14 @@
 ﻿l_english:
  esedor_host_reform:0 "Esedor host"
  esedor_host_reform_desc:0 "When we ride, Cannor trembles!"
+ tribe_cot_noble_reform:0 "Raise Military Commanders"
+ tribe_cot_noble_reform_desc:0 "Our Commanders have proven themselves worthy. We shall grant them additional rights and bestow upon them a new ruling status."
+ tribe_cot_burg_reform:0 "Adopt Merchant Principle"
+ tribe_cot_burg_reform_desc:0 "We've learned much over the centuries... most important being that money moves the world. Some among the youth have embraced this ideal and could be utilized."
+ tribe_cot_church_reform:0 "Council of Shamans"
+ tribe_cot_church_reform_desc:0 "Our religious leaders have guided our people to a great and stable future. It is time to let them guide our nation in a more official capacity."
+ tribe_cot_neutral_reform:0 "Consolidate Chief's Power"
+ tribe_cot_neutral_reform_desc:0 "Our glorious leader needs no help guiding our land!"
  
+ greentide_cot_provcost_modifier:0 "Shadow of Dookansfall" #moved from gov't to a modifier
+ greentide_cot_provcost_modifier_desc:0 "Rumors and signs abound that Dookanson has fallen. It weighs heavy upon the clans, and has brought about infighting and struggles for power not seen in decades, limiting our capacity to expand."
