Esmari formables ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -4536,3 +4536,96 @@
  A54_idea_6_3_desc:0 "Crothan 6 desc"
  A54_idea_7_3:0 "Merchant-Diplomats"
  A54_idea_7_3_desc:0 "Crothan 7 desc"
+
+
+ W26_ideas_2:0 "Estinipar Ideas 2"
+ W26_ideas_2_start:0 "Estinipar Traditions 2"
+ W26_ideas_2_bonus:0 "Estinipar Ambition 2"
+ W26_idea_1_2:0 "Like A River"
+ W26_idea_1_2_desc:0 "Estinipar 1 desc"
+ W26_idea_2_2:0 "Know Everyone"
+ W26_idea_2_2_desc:0 "Estinipar 2 desc"
+ W26_idea_3_2:0 "Valleys and Forests, Hills and Mountains"
+ W26_idea_3_2_desc:0 "Estinipar 3 desc"
+ W26_idea_4_2:0 "Land of Rivers and Forests"
+ W26_idea_4_2_desc:0 "Estinipar 4 desc"
+ W26_idea_5_2:0 "Trust Not The Trader"
+ W26_idea_5_2_desc:0 "Estinipar 5 desc"
+ W26_idea_6_2:0 "Light On Our Feet"
+ W26_idea_6_2_desc:0 "Estinipar 6 desc"
+ W26_idea_7_2:0 "Humbling the Proud"
+ W26_idea_7_2_desc:0 "Estinipar 7 desc"
+
+ W26_ideas_3:0 "Estinipar Ideas 3"
+ W26_ideas_3_start:0 "Estinipar Traditions 3"
+ W26_ideas_3_bonus:0 "Estinipar Ambition 3"
+ W26_idea_1_3:0 "Like A River"
+ W26_idea_1_3_desc:0 "Estinipar 1 desc"
+ W26_idea_2_3:0 "Know Everyone"
+ W26_idea_2_3_desc:0 "Estinipar 2 desc"
+ W26_idea_3_3:0 "Valleys and Forests, Hills and Mountains"
+ W26_idea_3_3_desc:0 "Estinipar 3 desc"
+ W26_idea_4_3:0 "Land of Rivers and Forests"
+ W26_idea_4_3_desc:0 "Estinipar 4 desc"
+ W26_idea_5_3:0 "Trust Not The Trader"
+ W26_idea_5_3_desc:0 "Estinipar 5 desc"
+ W26_idea_6_3:0 "Light On Our Feet"
+ W26_idea_6_3_desc:0 "Estinipar 6 desc"
+ W26_idea_7_3:0 "Humbling the Proud"
+ W26_idea_7_3_desc:0 "Estinipar 7 desc"
+
+
+ W25_ideas_2:0 "Estonaire Ideas 2"
+ W25_ideas_2_start:0 "Estonaire Traditions 2"
+ W25_ideas_2_bonus:0 "Estonaire Ambition 2"
+ W25_idea_1_2:0 "Rivers and Coasts"
+ W25_idea_1_2_desc:0 "Estonaire 1 desc"
+ W25_idea_2_2:0 "Know Everyone"
+ W25_idea_2_2_desc:0 "Estonaire 2 desc"
+ W25_idea_3_2:0 "Extra Tonnage"
+ W25_idea_3_2_desc:0 "Estonaire 3 desc"
+ W25_idea_4_2:0 "Land of Rivers and Forests"
+ W25_idea_4_2_desc:0 "Estonaire 4 desc"
+ W25_idea_5_2:0 "The Industry Is Behind Us!"
+ W25_idea_5_2_desc:0 "Estonaire 5 desc"
+ W25_idea_6_2:0 "Light On Our Feet"
+ W25_idea_6_2_desc:0 "Estonaire 6 desc"
+ W25_idea_7_2:0 "People of Little Villages"
+ W25_idea_7_2_desc:0 "Estonaire 7 desc"
+
+ W25_ideas_3:0 "Estonaire Ideas 3"
+ W25_ideas_3_start:0 "Estonaire Traditions 3"
+ W25_ideas_3_bonus:0 "Estonaire Ambition 3"
+ W25_idea_1_3:0 "Rivers and Coasts"
+ W25_idea_1_3_desc:0 "Estonaire 1 desc"
+ W25_idea_2_3:0 "Know Everyone"
+ W25_idea_2_3_desc:0 "Estonaire 2 desc"
+ W25_idea_3_3:0 "Extra Tonnage"
+ W25_idea_3_3_desc:0 "Estonaire 3 desc"
+ W25_idea_4_3:0 "Land of Rivers and Forests"
+ W25_idea_4_3_desc:0 "Estonaire 4 desc"
+ W25_idea_5_3:0 "The Industry Is Behind Us!"
+ W25_idea_5_3_desc:0 "Estonaire 5 desc"
+ W25_idea_6_3:0 "Light On Our Feet"
+ W25_idea_6_3_desc:0 "Estonaire 6 desc"
+ W25_idea_7_3:0 "People of Little Villages"
+ W25_idea_7_3_desc:0 "Estonaire 7 desc"
+
+
+ W24_ideas_3:0 "Golden Dominion Ideas 3"
+ W24_ideas_3_start:0 "Golden Dominion Traditions 3"
+ W24_ideas_3_bonus:0 "Golden Dominion Ambition 3"
+ W24_idea_1_3:0 "Embellished Halls"
+ W24_idea_1_3_desc:0 "Golden Dominion 1 desc"
+ W24_idea_2_3:0 "Know Everyone"
+ W24_idea_2_3_desc:0 "Golden Dominion 2 desc"
+ W24_idea_3_3:0 "Gilded Armies"
+ W24_idea_3_3_desc:0 "Golden Dominion 3 desc"
+ W24_idea_4_3:0 "Land of Rivers and Forests"
+ W24_idea_4_3_desc:0 "Golden Dominion 4 desc"
+ W24_idea_5_3:0 "Golden Cities"
+ W24_idea_5_3_desc:0 "Golden Dominion 5 desc"
+ W24_idea_6_3:0 "Light On Our Feet"
+ W24_idea_6_3_desc:0 "Golden Dominion 6 desc"
+ W24_idea_7_3:0 "Bejewelled Folk"
+ W24_idea_7_3_desc:0 "Golden Dominion 7 desc"
