--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -4629,3 +4629,60 @@
  W24_idea_6_3_desc:0 "Golden Dominion 6 desc"
  W24_idea_7_3:0 "Bejewelled Folk"
  W24_idea_7_3_desc:0 "Golden Dominion 7 desc"
+
+
+ ##### ORCS #####
+
+ B25_ideas_1:0 "Bladebreaker Ideas 1"
+ B25_ideas_1_start:0 "Bladebreaker Traditions 1"
+ B25_ideas_1_bonus:0 "Bladebreaker Ambition 1"
+ B25_idea_1_1:0 "Breakers of Calindal"
+ B25_idea_1_1_desc:0 "Bladebreaker 1 desc"
+ B25_idea_2_1:0 "Orcish Nation-Building"
+ B25_idea_2_1_desc:0 "Bladebreaker 2 desc"
+ B25_idea_3_1:0 "Forged in the Hills"
+ B25_idea_3_1_desc:0 "Bladebreaker 3 desc"
+ B25_idea_4_1:0 "The Endless Greentide"
+ B25_idea_4_1_desc:0 "Bladebreaker 4 desc"
+ B25_idea_5_1:0 "Breaker of Blades, Forgers of Chains"
+ B25_idea_5_1_desc:0 "Bladebreaker 5 desc"
+ B25_idea_6_1:0 "Vice Grip Administration"
+ B25_idea_6_1_desc:0 "Bladebreaker 6 desc"
+ B25_idea_7_1:0 "Innovators in Orcish Warfare"
+ B25_idea_7_1_desc:0 "Bladebreaker 7 desc"
+
+ B25_ideas_2:0 "Bladebreaker Ideas 2"
+ B25_ideas_2_start:0 "Bladebreaker Traditions 2"
+ B25_ideas_2_bonus:0 "Bladebreaker Ambition 2"
+ B25_idea_1_2:0 "Breakers of Calindal"
+ B25_idea_1_2_desc:0 "Bladebreaker 1 desc"
+ B25_idea_2_2:0 "Orcish Nation-Building"
+ B25_idea_2_2_desc:0 "Bladebreaker 2 desc"
+ B25_idea_3_2:0 "Forged in the Hills"
+ B25_idea_3_2_desc:0 "Bladebreaker 3 desc"
+ B25_idea_4_2:0 "The Endless Greentide"
+ B25_idea_4_2_desc:0 "Bladebreaker 4 desc"
+ B25_idea_5_2:0 "Breaker of Blades, Forgers of Chains"
+ B25_idea_5_2_desc:0 "Bladebreaker 5 desc"
+ B25_idea_6_2:0 "Vice Grip Administration"
+ B25_idea_6_2_desc:0 "Bladebreaker 6 desc"
+ B25_idea_7_2:0 "Innovators in Orcish Warfare"
+ B25_idea_7_2_desc:0 "Bladebreaker 7 desc"
+
+ B25_ideas_3:0 "Bladebreaker Ideas 3"
+ B25_ideas_3_start:0 "Bladebreaker Traditions 3"
+ B25_ideas_3_bonus:0 "Bladebreaker Ambition 3"
+ B25_idea_1_3:0 "Breakers of Calindal"
+ B25_idea_1_3_desc:0 "Bladebreaker 1 desc"
+ B25_idea_2_3:0 "Orcish Nation-Building"
+ B25_idea_2_3_desc:0 "Bladebreaker 2 desc"
+ B25_idea_3_3:0 "Forged in the Hills"
+ B25_idea_3_3_desc:0 "Bladebreaker 3 desc"
+ B25_idea_4_3:0 "The Endless Greentide"
+ B25_idea_4_3_desc:0 "Bladebreaker 4 desc"
+ B25_idea_5_3:0 "Breaker of Blades, Forgers of Chains"
+ B25_idea_5_3_desc:0 "Bladebreaker 5 desc"
+ B25_idea_6_3:0 "Vice Grip Administration"
+ B25_idea_6_3_desc:0 "Bladebreaker 6 desc"
+ B25_idea_7_3:0 "Innovators in Orcish Warfare"
+ B25_idea_7_3_desc:0 "Bladebreaker 7 desc"
