Emp can become EoA tag

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -115,3 +115,13 @@
  cot_unified_orcish_military_academy_bladebreaker:0 "Unified Orcish Military Academy: Bladebreaker"
  cot_unified_orcish_military_academy_barumand:0 "Unified Orcish Military Academy: Barumand"
  cot_unified_orcish_military_academy_khozrugan:0 "Unified Orcish Military Academy: Khozrugan"
+ 
+ #CoT Imperial Revoke Events
+ cot_misc_events.9.t:0 "A United Anbennar?"
+ cot_misc_events.9.d:0 "A stir passes around the parliament and all eyes turn to you. A young member of one of your house's cadet branches returned to his seat, powerful words linging in the air. 'Anbennar means unity, and we should be united! It is clear there is a ruling power, and it is time all member states accept this and swear fealty.'\n\nSuch words carry great weight with them, nearly as much as the words themselves. It is true, after all, that you weild immense powers, more than any since the empire's founding. The Electors all serve at worse as your pawn and at best as your closest confidants and aides. It would be a mere formality at this point to assume the mantle of THE Anbennarian Empire, in a single stroke delegitimizing everyone else's rule and claiming their lands. But is this truly the future? Is there not value in ensuring the many cultures and nations of this great state be kept whole and seperate?\n\nAt long last it is time to decide what "Unity" truly means, and it has fallen upon you to make that choice. Clearing your throat you stand and decree..."
+ cot_misc_events.9.a:0 "I AM ANBENNAR!"
+ cot_misc_events.9.b:0 "We are proud to remain First among Elites."
+ cot_misc_events.10.t:0 "Anbennar United?"
+ cot_misc_events.10.d:0 "At the most recent parliament, it was loudly and unnervingly suggested that the ancient idea of a single Anbennarian state was revived. Only time will tell what this means for the Empire and Cannor."
+ cot_misc_events.10.a:0 "What does this portend for Imperial lands?"
+ cot_misc_events.10.b:0 "Anbennar exists in unity!"
